# domain-token-gpt2

./: .gitignore  README.md  pyproject.toml  sft_cmd.sh  status_handoff.md
data/: __init__.py  prepare_fineweb_pilot.py  prepare_text.py  tokenize_to_bin.py
data/arithmetic_drills/: generate.py
data/gsm_sbs/: all_examples.json  metadata.json  (+33 more)
docs/: ARCHITECTURE.md  REPLICATION.md  RESEARCH.md
eval/: __init__.py  run_arithmetic_probes.py  run_gsm8k.py  run_hellaswag.py
pretrain/: __init__.py  export_hf.py  train.py  train_nanogpt.py
progress/: 01_research_spec.md  02_init_handoff.md  03_cluster_setup.md  04_pilot_smoketest.md  05_10b_experiment_ready.md  06_experiment_debug.md  07_bug_fix_route.md  08_sft_rerun_two_mixtures.md  09_curriculum_SFT.md  10_grpo_20x_analysis.md  11_tinygsm_distillation.md
rl/: __init__.py  grpo_train.py  rewards.py  trl_grpo_doc.md
sample/: sample_sft.py  text_completion.py
scripts/: analyze_grpo.py  checkpoint_intuition_check.py  compare_results.py  compare_runs.py  debug_tokenizer.py  download_tinygsm.py  eval_checkpoints.py  fix_tokenizers.py  load_from_hf.py  plot_checkpoint_curve.py  run_10b.sh  run_pilot.sh  run_smoke.sh  upload_to_hf.py  visualize_pretrain_losses.py
sft/: __init__.py  sft_curriculum.py  sft_gsm8k.py  sft_gsm_sbs.py  sft_tinygsm.py  sft_train.py  sft_transition.py  sft_tulu.py
tests/: __init__.py  conftest.py  test_eval_answer.py  test_hf_export.py  test_inject_mul.py  test_sft_dataset.py  test_tokenizer.py
tokenizer/: __init__.py  gpt2_tiktoken.py  hf_gpt2_with_mul.py  inject_mul.py  mul_facts.py
(+66 files in other folders)
